tests/miniJava/neg/000044_mutation.MiniJava
class java { class java { public static void Main ( String [ ] java ) { { } } } static void Main ( String [ ] java ) { { } } }
